<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="30dp"
  android:paddingTop="30dp"
  android:paddingEnd="30dp"
  android:paddingBottom="30dp"
  android:theme="@style/Widget.AppTheme.BottomSheet">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/filter_rating_title"
    android:textColor="@color/darkTitle"
    android:textSize="22sp" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:fillViewport="false">

    <RadioGroup
      android:id="@+id/filter_rating_radio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/filter_rating_any"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_any" />

      <RadioButton
        android:id="@+id/filter_rating_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_0" />

      <RadioButton
        android:id="@+id/filter_rating_0_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_0_5" />

      <RadioButton
        android:id="@+id/filter_rating_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_1" />

      <RadioButton
        android:id="@+id/filter_rating_1_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_1_5" />

      <RadioButton
        android:id="@+id/filter_rating_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_2" />

      <RadioButton
        android:id="@+id/filter_rating_2_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_2_5" />

      <RadioButton
        android:id="@+id/filter_rating_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_3" />

      <RadioButton
        android:id="@+id/filter_rating_3_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_3_5" />

      <RadioButton
        android:id="@+id/filter_rating_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_4" />

      <RadioButton
        android:id="@+id/filter_rating_4_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rating_4_5" />

    </RadioGroup>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>