<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="15dp"
  android:paddingBottom="15dp"
  android:paddingStart="15dp"
  android:paddingEnd="15dp"
  android:orientation="vertical"
  android:theme="@style/Widget.AppTheme.BottomSheet">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/filter_parts_title"
    android:textColor="@color/darkTitle"
    android:textSize="22sp"/>

  <RadioGroup
    android:id="@+id/filter_parts_radio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp">

    <RadioButton
      android:id="@+id/filter_parts_any"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_any"/>

    <RadioButton
      android:id="@+id/filter_parts_four"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_parts_four"/>

    <RadioButton
      android:id="@+id/filter_parts_five"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_parts_five"/>

    <RadioButton
      android:id="@+id/filter_parts_six"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_parts_six"/>

    <RadioButton
      android:id="@+id/filter_parts_seven"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_parts_seven"/>

    <RadioButton
      android:id="@+id/filter_parts_eight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/filter_parts_eight"/>

  </RadioGroup>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/filter_parts_apply_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/apply"
    android:theme="@style/AppTheme"/>

</LinearLayout>