<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="30dp"
  android:paddingTop="30dp"
  android:paddingEnd="30dp"
  android:paddingBottom="30dp"
  android:theme="@style/Widget.AppTheme.BottomSheet">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/filter_collection_title"
    android:textColor="@color/darkTitle"
    android:textSize="22sp" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:fillViewport="false">

    <RadioGroup
      android:id="@+id/filter_collection_radio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/filter_collection_any"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_any" />

      <RadioButton
        android:id="@+id/filter_collection_classic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_collection_classic" />

      <RadioButton
        android:id="@+id/filter_collection_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_collection_easy" />

      <RadioButton
        android:id="@+id/filter_collection_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_collection_100" />

    </RadioGroup>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>