<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="10dp"
  android:paddingBottom="10dp">

  <LinearLayout
    android:id="@+id/tag_list_icons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/tag_list_sheet_music"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_gravity="center_vertical"
      android:contentDescription="@string/music_content_description"
      android:src="@drawable/ic_music_note_quarter_black"
      android:tint="@color/colorAlternativeAccent" />

    <ImageView
      android:id="@+id/tag_list_track"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_marginStart="5dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/ic_album_black"
      android:tint="@color/colorAlternativeAccent" />

    <ImageView
      android:id="@+id/tag_list_video"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="10dp"
      android:contentDescription="@string/video_content_description"
      android:src="@drawable/ic_video_black"
      android:tint="@color/colorAlternativeAccent" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/tag_item"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:layout_toStartOf="@id/tag_list_icons"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tag_list_arranger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/by_arranger"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="12sp" />

      <TextView
        android:id="@+id/tag_list_line_sep"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/separator"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/tag_list_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/long_version"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/tag_list_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/tag_list_ratingBar"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/rating_icon_description"
        android:src="@drawable/star_empty" />

      <TextView
        android:id="@+id/tag_list_ratingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="13sp" />

    </LinearLayout>

    <TextView
      android:id="@+id/tag_list_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:paddingTop="-2dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/tag_name"
      android:textColor="@color/darkTitle"
      android:textSize="17sp" />

  </LinearLayout>

</RelativeLayout>
