<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal">

  <ImageView
    android:id="@+id/list_entry_icon"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:contentDescription="@string/list_icon_description"
    app:srcCompat="@drawable/favorite_transparent" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <TextView
      android:id="@+id/list_entry_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/list_name_hint"
      android:textColor="@color/darkTitle"
      android:textSize="16sp" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/list_entry_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/list_entry_default_count"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="14sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/list_entry_count_label"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="14sp" />

    </LinearLayout>

  </LinearLayout>

</LinearLayout>